--- a/PORTFOLIO MOHAMED AFSAL A/index.html
+++ b/PORTFOLIO MOHAMED AFSAL A/index.html
@@ -74,7 +74,7 @@
                     <h3 class="home__education"> Frontend Developer | JAVA Developer </h3>
 
                     <div class="home__button">
-                        <a download="" href="assets/pdf/MOHAMED AFSAL A ( CV ).pdf" class="button button--ghost">
+                        <a download="" href="file:///C:/Users/HP/Downloads/MOHAMED%20AFSAL%20(UPDATED%20RESUME).pdf" class="button button--ghost">
                             Download CV
                         </a>
 
